--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <h1>Hello Moto</h1>
     <h2>My name is Kishor Raguram G</h2>
     <p>hello how are you</p>
-    <p>I'm the no 1 player </p>
+    <p>I'm the no 1 player </p>  
+    <p>second the power</p>
+    
 </body>
 </html>
